--- a/index.html
+++ b/index.html
@@ -62,7 +62,30 @@
               </div>
               <div class="project-card">
                 <img class="project-image" src="img/project2.jpg" alt="Project One Image"/>
-  >
+  ><h3>Project Two</h3>
+  <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
+  <hr/>
+  <p class="subtext"><a class="project-link" href="https://www.github.com/kubowania">View here</a></p>
+</div>
+<div class="project-card">
+  <img class="project-image" src="img/project3.png" alt="Project One Image"/>
+  <h3>Project Three</h3>
+  <hr/>
+                <p class="subtext"><a class="project-link" href="https://www.github.com/kubowania">View here</a></p>
+              </div>
+              <div class="project-card">
+                <img class="project-image" src="img/Project4.jpg" alt="Project One Image"/>
+                <h3>Project Four</h3>
+                <p class="subtext">This is my project and some text about it. I enjoyed making this project.</p>
+                <hr/>
+                <p class="subtext"><a class="project-link" href="https://www.github.com/kubowania">View here</a></p>
+              </div>
+          </div>
+      </section>
+      <footer id="contact-me">
+          <h2>Contact me</h2>
+          <p>jaym69816@gmail.com</p>
+      </footer>
   </body>
 </html>
 
